@@ -9,9 +9,11 @@ import java.util.HashMap;
 
 import org.springframework.stereotype.Service;
 
+import com.minhdubai.Giftback.domain.dto.NotificationDto;
 import com.minhdubai.Giftback.domain.dto.common.ResponseDto;
 import com.minhdubai.Giftback.domain.entity.Notification;
 import com.minhdubai.Giftback.domain.entity.User;
+import com.minhdubai.Giftback.mapper.Mapper;
 import com.minhdubai.Giftback.repository.NotificationRepository;
 import com.minhdubai.Giftback.repository.UserRepository;
 
@@ -22,6 +24,7 @@ import lombok.RequiredArgsConstructor;
 public class NotificationService {
    private final UserRepository userRepository;
    private final NotificationRepository notificationRepository;
+   private final Mapper<Notification, NotificationDto> notiMapper;
 
    public boolean addNotificationToUser(Integer userId, String message) {
       try {
@@ -53,22 +56,26 @@ public class NotificationService {
 
    public ResponseDto getNotificationsByUserId(Integer userId) {
       try {
-         User user = userRepository.findById(userId).orElseThrow(() -> new RuntimeException("User not found"));
-         List<Notification> notifications = notificationRepository.findByUser(user);
-         return ResponseDto.builder()
-               .status(200)
-               .message("Notifications retrieved successfully")
-               .data(notifications)
-               .build();
+          User user = userRepository.findById(userId).orElseThrow(() -> new RuntimeException("User not found"));
+          List<Notification> notifications = notificationRepository.findByUser(user);
+          List<NotificationDto> notificationDtos = notifications.stream()
+                  .map(notiMapper::mapTo)
+                  .collect(Collectors.toList());
+
+          return ResponseDto.builder()
+                  .status(200)
+                  .message("Notifications retrieved successfully")
+                  .data(notificationDtos)
+                  .build();
       } catch (Exception e) {
-         System.out.println(e.getMessage());
-         return ResponseDto.builder()
-               .status(500)
-               .message("An error occurred while retrieving notifications")
-               .data(Collections.emptyList())
-               .build();
+          System.out.println(e.getMessage());
+          return ResponseDto.builder()
+                  .status(500)
+                  .message("An error occurred while retrieving notifications")
+                  .data(List.of())
+                  .build();
       }
-   }
+  }
 
    public ResponseDto sendNotificationToAllUsers(String message) {
       try {
@@ -128,6 +135,14 @@ public class NotificationService {
                .message("An error occurred while retrieving grouped notifications")
                .data(Collections.emptyMap())
                .build();
+      }
+   }
+
+   public void deleteNotification(Integer id) {
+      Notification noti = notificationRepository.findById(id).orElse(null);
+
+      if (noti != null) {
+         notificationRepository.delete(noti);
       }
    }
 }
